--- a/AmplifyPlugins/Auth/Tests/AuthHostApp/AuthHostApp.xcodeproj/xcshareddata/xcschemes/AuthWatchApp.xcscheme
+++ b/AmplifyPlugins/Auth/Tests/AuthHostApp/AuthHostApp.xcodeproj/xcshareddata/xcschemes/AuthWatchApp.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1340"
-   version = "1.3">
+   LastUpgradeVersion = "1430"
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "6857645B28AE94D9000CE2E9"
-               BuildableName = "AnalyticsHostApp.app"
-               BlueprintName = "AnalyticsHostApp"
-               ReferencedContainer = "container:AnalyticsHostApp.xcodeproj">
+               BlueprintIdentifier = "681B767F2A3CB86B004B59D9"
+               BuildableName = "AuthWatchApp.app"
+               BlueprintName = "AuthWatchApp"
+               ReferencedContainer = "container:AuthHostApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -26,34 +26,8 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
-      <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "6857647528AE95ED000CE2E9"
-               BuildableName = "AWSPinpointAnalyticsPluginIntegrationTests.xctest"
-               BlueprintName = "AWSPinpointAnalyticsPluginIntegrationTests"
-               ReferencedContainer = "container:AnalyticsHostApp.xcodeproj">
-            </BuildableReference>
-            <SkippedTests>
-               <Test
-                  Identifier = "AWSPinpointAnalyticsPluginIntergrationTests/testGetEscapeHatch()">
-               </Test>
-            </SkippedTests>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "97914D2029564227002000EA"
-               BuildableName = "AnalyticsStressTests.xctest"
-               BlueprintName = "AnalyticsStressTests"
-               ReferencedContainer = "container:AnalyticsHostApp.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-      </Testables>
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      shouldAutocreateTestPlan = "YES">
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -69,10 +43,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "6857645B28AE94D9000CE2E9"
-            BuildableName = "AnalyticsHostApp.app"
-            BlueprintName = "AnalyticsHostApp"
-            ReferencedContainer = "container:AnalyticsHostApp.xcodeproj">
+            BlueprintIdentifier = "681B767F2A3CB86B004B59D9"
+            BuildableName = "AuthWatchApp.app"
+            BlueprintName = "AuthWatchApp"
+            ReferencedContainer = "container:AuthHostApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -86,12 +60,21 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "6857645B28AE94D9000CE2E9"
-            BuildableName = "AnalyticsHostApp.app"
-            BlueprintName = "AnalyticsHostApp"
-            ReferencedContainer = "container:AnalyticsHostApp.xcodeproj">
+            BlueprintIdentifier = "681B767F2A3CB86B004B59D9"
+            BuildableName = "AuthWatchApp.app"
+            BlueprintName = "AuthWatchApp"
+            ReferencedContainer = "container:AuthHostApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "681B767F2A3CB86B004B59D9"
+            BuildableName = "AuthWatchApp.app"
+            BlueprintName = "AuthWatchApp"
+            ReferencedContainer = "container:AuthHostApp.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
